--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "my-new-project",
-  "type": "module",
-  "devDependencies": {
+  "name": "wdio-bstack-electron-automation",
+  "dependencies": {
     "@babel/core": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
     "@babel/register": "^7.22.5",
@@ -9,7 +8,11 @@
     "@wdio/local-runner": "^8.15.6",
     "@wdio/mocha-framework": "^8.15.6",
     "@wdio/spec-reporter": "^8.15.6",
-    "wdio-electron-service": "^4.3.0"
+    "wdio-electron-service": "^4.3.0",
+    "wdio-chromedriver-service": "^7.2.0",
+    "chromedriver": "^108.0.0",
+    "electron": "^22.2.0",
+    "kill-port": "^1.6.1"
   },
   "scripts": {
     "wdio": "wdio run ./wdio.conf.js"
